# mara

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  build  run_tests
.github/workflows/: push.yml
cli/: CMakeLists.txt  compile.c  exec.c  main.c  parse.c
cmake/: linux.cmake
dmux/: cli.json  tests.json
examples/: boxed-fib.lua  boxed-fib.mara  boxed-fib.py  fib.lua  fib.mara  fib.py
include/: mara-bind.h  mara.h
include/mara/: bind.h  utils.h
src/: CMakeLists.txt  alloc.c  barray.h  compiler.c  context.c  copy.c  core_module.c  debug.c  debug_info.c  env.c  error.c  gc.c  gc.h  hamt.h  internal.h  lexer.c  lexer.h  list.c  map.c  math.c  module.c  nanoprintf.h  parser.c  print.c  ptr_map.c  ptr_map.h  record.c  record.h  stack.c  string.c  string.h  strpool.c  strpool.h  symtab.c  thread.c  thread.h  tracker.h  value.c  value_nanbox.c  value_nanbox.h  (+9 more)
tests/: CMakeLists.txt  bind.c  common.h  context.c  helpers.c  helpers.h  lexer.c  main.c  parser.c  rktest.h  runtime.c  stack.c  strpool.c  value.c
